objects/ssot__GiftRefund__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Date__c</fullName>
        <label>Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__GiftTransactionId__c</fullName>
        <label>GiftTransaction</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Gift Refund Id</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Reason__c</fullName>
        <label>Reason</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__RefundAmount__c</fullName>
        <label>Refund Amount</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1697761239679_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>GiftRefund_GiftTransactionId_map_Gif_rel</label>
        <referenceTo>ssot__GiftTransaction__dlm</referenceTo>
        <relationshipLabel>GiftRefund_GiftTransactionId_map_Gif_rel</relationshipLabel>
        <relationshipName>rel_1697761239679_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>